--- a/popup.css
+++ b/popup.css
@@ -186,6 +186,15 @@ body {
   outline: 1px solid grey;
   cursor: pointer;
   padding: 5px;
+  user-select: none;
 }
 
 .btn.preview { display: none; }
+
+
+.review--wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 8pt;
+}
