--- a/popup.css
+++ b/popup.css
@@ -36,6 +36,7 @@ body {
   justify-content: space-around;
   flex-direction: column;
   align-items: stretch;
+  position: relative;
 }
 
 .calendar {
@@ -201,4 +202,89 @@ body {
   flex-direction: column;
   align-items: center;
   font-size: 8pt;
+}
+
+.settings--button {
+  background-color: #EEE;
+  cursor: pointer;
+  color: white;
+  font-weight: bold;
+  position: absolute;
+  left: 5px;
+  bottom: 5px;
+  border-radius: 10px;
+  padding: 3px 7px 3px 7px;
+}
+
+.settings--button:hover {
+  background-color: #BBB;
+}
+
+.settings-mode .settings--button {
+  background-color: #666;
+}
+
+.settings-mode .settings--modal {
+  display: flex;
+}
+
+.settings-mode .source-select {
+  opacity: .50;
+  pointer-events: none;
+}
+
+.settings--modal {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: white;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.settings--modal--main {
+  flex: 1;
+  display: flex;
+  justify-content: stretch;
+}
+
+.settings--pane {
+  margin-top: 10px;
+  margin-bottom: 80px;
+  flex: 1;
+}
+
+.sourcelist {
+  border-right: 1px solid black;
+}
+
+.settings--title {
+  font-size: 20px;
+  text-align: center;
+}
+
+.sourcelist--title {
+  font-size: 18px;
+  text-align: center;
+}
+
+.sourcelist--sources {
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+}
+
+.sourcelist--source {
+  display: flex;
+  user-select: none;
+  background-color: #FCFCFC;
+}
+
+.sourcelist--source:nth-child(even) {
+  background-color: #EEE;
+}
+
+.sourcelist--source .sourcelist--up:hover {
+  background-color: #BBB;
 }
